# tipc

./: .gitignore  ASTAccessExpr_8h.html  ASTAccessExpr_8h__dep__incl.map  ASTAccessExpr_8h__dep__incl.md5  ASTAllocExpr_8h.html  ASTAllocExpr_8h__dep__incl.map  ASTAllocExpr_8h__dep__incl.md5  ASTAssignStmt_8h.html  ASTAssignStmt_8h__dep__incl.map  ASTAssignStmt_8h__dep__incl.md5  ASTBinaryExpr_8h.html  ASTBinaryExpr_8h__dep__incl.map  ASTBinaryExpr_8h__dep__incl.md5  ASTBlockStmt_8h.html  ASTBlockStmt_8h__dep__incl.map  ASTBlockStmt_8h__dep__incl.md5  ASTDeRefExpr_8h.html  ASTDeRefExpr_8h__dep__incl.map  ASTDeRefExpr_8h__dep__incl.md5  ASTDeclNode_8h.html  ASTDeclNode_8h__dep__incl.map  ASTDeclNode_8h__dep__incl.md5  ASTDeclStmt_8h.html  ASTDeclStmt_8h__dep__incl.map  ASTDeclStmt_8h__dep__incl.md5  ASTErrorStmt_8h.html  ASTErrorStmt_8h__dep__incl.map  ASTErrorStmt_8h__dep__incl.md5  ASTExpr_8h.html  ASTExpr_8h__dep__incl.map  ASTExpr_8h__dep__incl.md5  ASTFieldExpr_8h.html  ASTFieldExpr_8h__dep__incl.map  ASTFieldExpr_8h__dep__incl.md5  ASTFunAppExpr_8h.html  ASTFunAppExpr_8h__dep__incl.map  ASTFunAppExpr_8h__dep__incl.md5  ASTFunction_8h.html  ASTFunction_8h__dep__incl.map  ASTFunction_8h__dep__incl.md5  (+414 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+65 more)
src/: CMakeLists.txt  tipc.cpp
src/codegen/: CMakeLists.txt  CodeGenFunctions.cpp  CodeGenerator.cpp
src/frontend/ast/treetypes/: ASTProgram.h
src/lsp/: AnalsysisTaskManager.cpp  CMakeLists.txt  GetVariableNode.cpp  GetVariableNode.h  LSP.cpp  LSPState.cpp  LSPState.h  Lsp.cpp  Lsp.h  README.md  RPC.cpp  RPC.h  Rpc.cpp  Rpc.h
src/lsp/messages/: CompletionRequest.h  DidChangeTextDocumentNotification.h  DidOpenTextDocumentNotification.h  DocumentFormattingRequest.h  HoverRequest.h  InitializeRequest.h  PublishDiagnosticsNotification.h  TextDocument.h  messages.cpp  messages.h
src/optimizer/: Optimizer.cpp
src/semantic/symboltable/: FunctionNameCollector.cpp  LocalNameCollector.cpp
src/semantic/types/constraints/: AbsentFieldChecker.cpp
src/semantic/types/solver/: Unifier.h  UnionFind.cpp
src/semantic/weeding/: CheckAssignable.cpp
test/unit/: CMakeLists.txt
test/unit/lsp/: CMakeLists.txt  LSPTest.cpp  RpcTest.cpp
